# outreachy

./: .gitignore  README.md
AliyaRahmani/: README.md
AliyaRahmani/1. Introduction to WebAssembly/: README.md
AliyaRahmani/2. Run python program using WASMTIME/: CountDigit.py  README.md
AliyaRahmani/3. A simple calculator with rust using WASM/: README.md
AliyaRahmani/4. Compiling BFS in WASM/: README.md
AliyaRahmani/5. Deep dive into Enarx/: README.md
Fienne/minigrep/: README.md  sample.txt
Gracie/: calculator.rs  intro2Wasm.md  runningWebAssemblyOnWindows.md
Gunjan/: README.md
Gunjan/1 - C++ in the web browser using web assembly/: README .md
Gunjan/2 - Implementing Quick Sort on server-side/: README.md
Gunjan/3 - Introduction to Confidential Computing - Part 1/: README.md
Jennifer/: README.md
Jennifer/Golang to WASI/: README.md  main.go
KiraMirCab/: Enarx - Introducción.docx  Glossary.md  Spanish glossary.docx  readme-en.md  readme.md
Kirtee/: README.md
Morgannjaw/: README.md
NGP/: README.md
Silvana/: README.md
Webassembly-inside-the-browser/: index.html
ajay/: README.md
ajay/nowBrowser/rustWasm/markdown_parser/: Cargo.toml  README.md
ajay/nowBrowser/rustWasm/markdown_parser/src/: main.rs
aryankaushik/: README.md  Readme.md
ginjarDev/: README.md
mandeepkaur/: README.md
sahitya/: Readme.md  readme.md
seye/: readme.md
shravi24/: INTRODUCTION.md  README.md
shravi24/Demos/Inside Browser/Rust/Code/: Cargo.toml
shravi24/Demos/Inside Browser/Rust/Code/src/: index.html  lib.rs
webasembly-outside-the-browser/: readme.md
(+281 files in other folders)
