[package]
name = "markdown_parser"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/TeXitoi/structopt
structopt = "0.3"

# https://crates.io/crates/pulldown-cmark
pulldown-cmark = { version = "0.8", default-features = false }
