[package]
name = "hello_world-wasm"
version = "0.1.0"
authors = ["Shraddha Inamdar <shraddha.inamdar95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]